<resources>
    <string name="app_name">Scoring Salud</string>
    <string name="prefs_file">com.pf.scoringsalud.PREFERENCE_FILE_KEY</string>
    <string name="notification_channel_group_general">General</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Programar notificacion</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="profile">Profile</string>
    <string name="rutina">Rutina</string>
    <string name="logors">Logors</string>
    <string name="progreso">Progreso</string>
    <string name="jonh_doe">Jonh Doe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="soy_el_perfil">SOY El PERFIL</string>
    <string name="home">Home</string>
    <string name="experta">EXPERTA</string>
    <string name="scoring_salud">Scoring Salud</string>
    <string name="o_con_tus_credenciales_experta">O con tus credenciales Experta:</string>
    <string name="inicio_con_google">Inicio con Google</string>
    <string name="texto_aceptar">Aceptar</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="tu_proxima_actividad_iniciara_en">Tu proxima actividad iniciara en:</string>
    <string name="programar_actividad">Programar com.pf.scoringsalud.Puntuable.Actividad</string>
    <string name="tu_proxima_actividad_iniciar_a_las">Tu proxima actividad iniciará a las:</string>
    <string name="ver_progreso">Ver progreso</string>
    <string name="title_activity_main">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="perfil">Perfil</string>
    <string name="acerca_de">Acerca de</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="title_activity_progreso">ProgresoActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>