<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/cabin"
        android:title="@string/home"/>
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/card"
        android:title="@string/profile"/>

       <item
        android:id="@+id/menuRutina"
        android:icon="@drawable/calendar"
        android:title="@string/rutina"/>

        <item
        android:id="@+id/menuLogros"
        android:icon="@drawable/medal"
        android:title="@string/logors"/>

        <item
        android:id="@+id/menuProgreso"
        android:icon="@drawable/goal"
        android:title="@string/progreso"/>

        <item
        android:id="@+id/about"
        android:icon="@drawable/info"
        android:title="About"/>



</menu>