<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SuenioActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/backBTN"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/experta"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="@string/scoring_salud"
                android:textSize="19sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="351dp"

            android:layout_height="560dp"

            android:layout_margin="12dp"
            android:background="@color/white"
            app:cardCornerRadius="23dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutToolBar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="298dp"
                    android:layout_height="21dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.437"
                    android:progress="0"
                    android:progressTint="@color/colorPrimary"/>


                <TextView
                    android:id="@+id/hsSuenio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.339" />

                <TextView
                    android:id="@+id/fechaSuenio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hoy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.099" />

                <TextView
                    android:id="@+id/textSuenio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Horas de sueño"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.656" />


                <TextView
                    android:id="@+id/inicioSuenio"
                    android:layout_width="95dp"
                    android:layout_height="22dp"
                    android:layout_marginStart="50dp"
                    android:drawableStart="@drawable/moon"
                    android:text="Inicio"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.788" />

                <TextView
                    android:id="@+id/finSuenio"
                    android:layout_width="95dp"
                    android:layout_height="22dp"
                    android:layout_marginEnd="50dp"
                    android:drawableStart="@drawable/sun"
                    android:text="Fin"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/inicioSuenio"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.788" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>